# testC

./: .gitignore  .gitlab-ci.yml  .yamllint.yml  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements-ci.txt
code/: evaluation.py  requirements.txt
reports/: 56083_BlairWitchProject.yml  56131_EarthSystems.yml  56531_Manhattan.yml
src/cr_analysis/: __init__.py  _constants.py  _module_analysis.py  _module_linting.py  _module_validation.py  _utils.py
src/cr_analysis/evaluation/: eval_postconsulting.ipynb  eval_postconsulting.py
src/cr_cli/: __main__.py  cli.py
src/cr_gui/: __init__.py  constants.py  ui_create.py  ui_plot.py  utils.py
templates/: README.md  consultation-report.schema.json  structured_report_template.yml  validate.py
